--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -301,3 +301,49 @@ textarea:focus{
     margin-left: 15px;
 
 }
+
+.boxText {
+    font-size: 30px;
+    margin: 20px;
+    font-family: "Arial Black";
+    letter-spacing: 1px;
+
+}
+
+.messageTable{
+    margin: 20px;
+    padding: 10px;
+    font-family: "Times New Roman";
+    font-size: 15px;
+}
+
+.messageTable table {
+  border-collapse: collapse;
+  width: 100%;
+     table-layout: fixed;
+    border-spacing: 50px;
+}
+
+.messageTable td {
+  padding: 8px;
+  text-align: left;
+    width: 100px;
+  border-bottom: 1px solid #ddd;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    padding: 15px;
+}
+
+.messageTable th{
+    padding: 8px;
+  text-align: left;
+    width: 100px;
+    background-color: black;
+    color: white;
+    font-size: 18px;
+    padding: 15px;
+}
+
+.messageTable tr:hover {background-color:#f5f5f5;}
+
