--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,31 +1,37 @@
+html, body {
+    max-width: 100%;
+
+}
+
 .headerGrid {
     display: grid;
 
     grid-template-rows: 120px 500px ;
     grid-gap: 30px;
-
+    background-color: white;
 
 }
 
 .lowerGrid {
     display: grid;
-    grid-template-columns:  150px auto;
+    grid-template-columns:  90px auto;
     grid-gap:  5px;
 
      margin-top: 20px;
     border: white;
     border-style: solid ;
+    background-color: white;
 }
 
 .header{
-    background-color: #ffffff;
+    background-color: white;
     font-size: 40px;
     padding: 10px;
     align-content: center;
     color: Black;
     height: 100%;
     display: grid;
-    grid-template-columns: 70% auto;
+    grid-template-columns: 78% auto;
     border: #d52e2e;
 
 }
@@ -69,7 +75,7 @@
 }
 
 .lower{
-    background-color: #b4d9e7;
+    background: white;
     font-size: 20px;
 
 
@@ -81,41 +87,44 @@
     width: 100%;
     height: 100%;
     background: white;
-
     display: grid;
+    padding-top: 100px;
 
     grid-template-rows: 50px 50px 50px;
 }
 .Messages{
-    width: 80%;
+    width: 93%;
     height: 100%;
 
-    background: white;
+    background-color: white;
     padding: 50px;
     margin-right: 50px;
 }
 
 .newMail{
-    background-color: #f8efef;/* Green */
-    width: 80%;
+    background-color: #e0d2d2;/* Green */
+    width: 100px;
   border: none;
   color: black;
   padding: 10px;
-    margin: 15px;
+    margin-right: 60px;
+    margin-bottom: 60px;
     border-radius: 100px;
   text-align: center;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.5);
      font-family: Arial;
     font-weight: bold;
-
+    position: fixed;
+    bottom: -10px;
+    right: -10px;
 }
 
 .newMail:hover{
-    background-color: #d52e2e;
+    background-color: #000000;
      transform: translateY(-1px);
-    box-shadow: 0px 8px 15px rgba(222, 43, 43, 0.5);
+    box-shadow: 0px 8px 15px rgba(45, 44, 44, 0.5);
     color: white;
 }
 
@@ -124,35 +133,30 @@
 }
 
 .inboxButton {
-    margin-top: 40px;
+    margin-top: 20px;
      font-weight: bold;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     background-color: transparent ;/* Green */
     width: 100%;
   border: none;
   color: black;
-  padding: 15px 32px;
+  padding: 10px 18px;
   text-align: center;
   text-decoration: none;
     font-family: Arial;
-  font-size: 15px;
+  font-size: 16px;
 
   cursor: pointer;
 }
 
 .inboxButton:hover{
-   background-color: #de2b2b;
-     color: white;
+   background-color: #efefef;
 
-}
-.inboxButton:focus{
-    background-color: #de2b2b;
-    border-color: #de2b2b;
-     color: white;
+
 }
 
 .hamburger{
-    float: end;
+    align-self: center;
 }
 
 
@@ -205,7 +209,8 @@ textarea:focus{
   background-color: transparent;
   color: cornflowerblue;
   padding: 12px;
-  font-size: 16px;
+    margin-top: 5px;
+  font-size: 17px;
   border: none;
   cursor: pointer;
 }
@@ -221,10 +226,11 @@ textarea:focus{
 
 .dropdown-content {
   display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 120px;
 
+  background-color: #f1f1f1;
+  min-width: 160px;
+  position: absolute;
+  right: 0;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -247,27 +253,60 @@ textarea:focus{
 
 .switchaccbtn{
     width: 100%;
-    font-size: 15px;
+    font-size: 16px;
     color: black;
     background-color: white;
-    padding: 5px;
-    margin: 2px;
+    padding: 8px;
+    margin: 3px;
     border: transparent;
 
 }
 .switchaccbtn:hover{
     color: white;
-    background-color: red;
+    background-color: #1f1e1e;
 }
 
 .displayAccountDetials {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: white;
   min-width: 120px;
-
+    right: 0;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    vertical-align: center;
+}
+
+
+
+.accountDetailHeading{
+    text-align: center;
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-size: 16px;
+    font-family: "Arial";
+    color: #555454;
+    width: 100%;
+
+    padding-bottom: 10px;
+}
+
+.accountDetailInfo{
+    text-align: center;
+    width: 100%;
+    font-size: 12px;
+    font-family: "Arial";
+
+}
+
+.accountBalance {
+    font-family: "Arial Black";
+    font-size: 25px;
+    color: #585252;
+
 }
 
 .displayAccount{
@@ -275,17 +314,19 @@ textarea:focus{
 }
 
 .accountLabel{
-    background-color: black;
-    color: white;
+    background-color: transparent;
+    color: black;
     border: none;
 
-    margin: 10px;
-    font-size: 20px;
-    letter-spacing: 1px;
-    padding-left: 50px;
-    padding-right: 50px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-left: 10px;
+    font-size: 14px;
+    right: -10px;
+    padding: 12px;
+}
+
+.accountLabel:hover, .accountLabel:focus{
+    background-color: black;
+    color: white;
 }
 
 .hamburger {
@@ -296,7 +337,7 @@ textarea:focus{
 }
 
 .hamburgerButton{
-    float: end;
+
     margin-top: 10px;
     margin-left: 15px;
 
@@ -311,7 +352,7 @@ textarea:focus{
 }
 
 .messageTable{
-    margin: 20px;
+    margin: 15px;
     padding: 10px;
     font-family: "Times New Roman";
     font-size: 15px;
@@ -319,7 +360,7 @@ textarea:focus{
 
 .messageTable table {
   border-collapse: collapse;
-  width: 100%;
+  width: 94%;
      table-layout: fixed;
     border-spacing: 50px;
 }
@@ -329,9 +370,9 @@ textarea:focus{
   text-align: left;
     width: 100px;
   border-bottom: 1px solid #ddd;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+    /*text-overflow: ellipsis;*/
+    /*white-space: nowrap;*/
+    /*overflow: hidden;*/
     padding: 15px;
 }
 
@@ -345,5 +386,82 @@ textarea:focus{
     padding: 15px;
 }
 
-.messageTable tr:hover {background-color:#f5f5f5;}
+.messageTable tr:hover {
+    background-color:#f5f5f5;
+    cursor: pointer;
+}
 
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 20px;
+    /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 80px;
+  border: 1px solid #888;
+  width: 80%;
+    height: 70%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.time{
+    color: dimgray;
+    font-size: 16px;
+    right: 150px;
+    bottom: 100px;
+    position: fixed;
+    align-self: end;
+    padding: 10px;
+}
+
+.modalHeading{
+    font-size: 16px;
+    font-family: "Arial";
+
+    color: #1f1e1e;
+
+}
+
+.modalContent{
+    font-size: 16px;
+    font-family: "Arial";
+
+    color: black;
+}
+
+.modalTable{
+    margin: 10px;
+    border-spacing: 10px;
+
+}
+
+.modalTable tr{
+    padding-bottom: 12px;
+}
